# Python-Data-Toolkit

./: .gitignore  1.csv  10.csv  11.csv  12.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  CHANGELOG.md  Python-Data-Toolkit_tree_2025-10-23_17h00.txt  README.md  config_manager.py  data_toolkit.py  fix_script.py  install.sh  main.py  pyproject.toml  requirements.txt  schema_bq.json  uninstall.sh
excel/: [20250813] dm_esfera.csv  [20250813] dm_esfera_processado.xlsx  [20250813] dm_esfera_processado_processado.xlsx  analise_[20250813] dm_esfera_processado.xlsx.txt  processado_[20250813] dm_esfera_processado_processado.xlsx
src/: main.py
src/core/: config.py  logger.py
src/tabs/: anonymizer.py  auxiliador.py  cleaner.py  comparer.py  etl_preparer.py  extrator.py  geolocalizador.py  profiler.py  segmenter.py  settings.py  unifier.py  visualizer.py
src/ui/: app.py  base_tab.py  theme.py
tests/: test_integrator.py
ui/: __init__.py  anonymizer_tab.py  base_tab.py  cleaner_tab.py  comparer_tab.py  config_manager.py  custom_widgets.py  dbt_assistant_tab.py  etl_preparer_tab.py  geolocalizador_tab.py  init.py  integrator_tab.py  profiler_tab.py  segmenter_tab.py  settings_tab.py  theme.py  unifier_tab.py  visualizer_tab.py
