[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "python-data-toolkit"
version = "1.0.0"
description = "Ferramentas visuais para manipulação e análise de dados tabulares"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "google-generativeai>=0.8.0",
    "pdfplumber",
    "tabulate",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "unstructured",
    "tabula-py",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
